# slocate-2.7

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acconfig.h  config.h.in  configure  configure.in  install  install-cron.sh  link.c  link.h  main.c  misc.c  misc.h  mkinstalldirs  sl_fts.c  sl_fts.h  slocate.cron
